2006-08-16 Jim Garlick <garlick@llnl.gov>

    * test/vicebox.[ch], test/svicebox.c, etc/vicebox.dev: Removed.

    * scripts/*.sh: Removed (vicebox stuff).

    * Makefile, src/Makefile: Cleanup.

    * src/parse.y, src/device_tcp.c: Support 'quiet' TCP device option
    which suppresses connect/disconnect/telnet log messages.
    Undocumented for now (for Douglas Clay at Sandia CA).

    * src/device_tcp.c: Respond WONT to TELOPT_BINARY sent by Cyclades.

    * : tag powerman-1.0.25

2006-08-01 Jim Garlick <garlick@llnl.gov>

    * src/device_tcp.c: _telnet_recvopt(): Respond WONT to
    TELOPT_ECHO and TELOPT_LFLOW sent by newer baytechs.

2006-07-12 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc3-nc.dev: slight mods to support newer firmware.

2006-06-20 Jim Garlick <garlick@llnl.gov>

    * etc/icebox4.dev: New (from Jarod Wilson).

2006-05-30 Jim Garlick <garlick@llnl.gov>

    * : tag powerman-1.0.24

    * powerman.spec: fixed typo in %defattr

    * : tag powerman-1.0.24-2

2006-05-25 Jim Garlick <garlick@llnl.gov>

    * src/hostlist.[ch]: update to the latest from lsd-tools to
    fix case where powerman would not expand [00-26]p.

2006-05-24 Jim Garlick <garlick@llnl.gov>

    * src/device_tcp.c: _telnet_recvopt(): log any ignored option 
    negotiation requests.  Respond WONT to TELOPT_NEW_ENVIRON, 
    TELOPT_XDISPLOC, TELOPT_TSPEED to make Digi terminal server in
    telnet mode happy (gnat powerman/634).

    * powerman.spec: Include examples directory in RPM.

    * etc/cyclades-pm10.dev: New [Trent D'Hooge].

2006-04-26 Jim Garlick <garlick@llnl.gov>

    * src/hostlist.c: hostlist_next(): call out_of_memory() on malloc 
    failure [coverity].

    * src/client.c: always free hostlist_next() result if non-null [coverity].

    * src/device_serial.c: document valid return for sscanf() with an 
    assert() [coverity].

    * src/client.c: _client_query_status_reply_nointerp(): ensure 