@@ -1,3 +1,8 @@
+2006-08-18 Jim Garlick <garlick@llnl.gov>
+
+    * src/hostlist.[ch]: update to the latest from lsd-tools to
+    fix memory leak regression [coverity].
+
 2006-08-16 Jim Garlick <garlick@llnl.gov>
 
     * test/vicebox.[ch], test/svicebox.c, etc/vicebox.dev: Removed.
